==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/nxp/src/i2c/implementation_1/hal_ll_i2c_master.c <==
#include "hal_ll_rcc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_i2c_master.h"
#include "hal_ll_i2c_pin_map.h"
#include "delays.h"
#define hal_ll_i2c_get_module_state_address ((hal_ll_i2c_master_handle_register_t *)*handle)
#define hal_ll_i2c_get_handle (hal_ll_i2c_master_handle_register_t *)hal_ll_i2c_get_module_state_address->hal_ll_i2c_master_handle
#define hal_ll_i2c_get_base_struct(_handle) ((hal_ll_i2c_base_handle_t *)_handle)
#define hal_ll_i2c_get_base_from_hal_handle ((hal_ll_i2c_hw_specifics_map_t *)((hal_ll_i2c_master_handle_register_t *)\
                                            (((hal_ll_i2c_master_handle_register_t *)(handle))->hal_ll_i2c_master_handle))->hal_ll_i2c_master_handle)->base
#define HAL_LL_I2C_SCL_PIN              0
#define HAL_LL_I2C_SDA_PIN              1
#define HAL_LL_I2C_MODULE_PIN_COUNT     2
#define HAL_LL_I2C_F_ICR_MASK           0x3FU
#define HAL_LL_I2C_MASTER_SPEED_100K    100000UL
#define HAL_LL_I2C_MASTER_SPEED_400K    400000UL
#define HAL_LL_I2C_MASTER_SPEED_1M      1000000UL
#define HAL_LL_I2C_MASTER_SPEED_3M2     3200000UL
#define HAL_LL_I2C_DEFAULT_PASS_COUNT   10000
#define HAL_LL_I2C_C1_RSTA_BIT          2
#define HAL_LL_I2C_C1_TXAK_BIT          3
#define HAL_LL_I2C_C1_TX_BIT            4
#define HAL_LL_I2C_C1_IICIE_BIT         6
#define HAL_LL_I2C_C1_MST_BIT           5
#define HAL_LL_I2C_C1_IICEN_BIT         7
#define HAL_LL_I2C_S_RXAK_BIT           0
#define HAL_LL_I2C_S_IICIF_BIT          1

static hal_ll_err_t hal_ll_i2c_master_stop( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct( map->base );
    uint16_t time_counter = map->timeout;
    hal_ll_err_t status;

    clear_reg_bit( &( hal_ll_hw_reg->c1 ), HAL_LL_I2C_C1_MST_BIT );
    clear_reg_bit( &( hal_ll_hw_reg->c1 ), HAL_LL_I2C_C1_TX_BIT );

    status = hal_ll_i2c_master_wait_for_idle( map );
    if( HAL_LL_I2C_MASTER_SUCCESS != status )
        return status;

    #if defined I2C_MASTER_CHIP_SELECT
    while ( !check_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT ) ) {
        if ( map->timeout ) {
            if( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_STOP;
        }
    }
    if( check_reg_bit( &( hal_ll_hw_reg->flt ), HAL_LL_I2C_FLT_STOPF_BIT ) )
        set_reg_bit( &( hal_ll_hw_reg->flt ), HAL_LL_I2C_FLT_STOPF_BIT );
    #endif
    set_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT );
    #if defined I2C_MASTER_CHIP_SELECT
    time_counter = map->timeout;
    while ( check_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT )) {
        if ( map->timeout ) {
            if( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_STOP;
        }
    }
    #endif
    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_read_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *read_data_buf, size_t len_read_data, hal_ll_i2c_master_end_mode_t mode ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct( map->base );
    size_t i = 0;
    hal_ll_err_t status = HAL_LL_I2C_MASTER_SUCCESS;

    if ( HAL_LL_I2C_MASTER_WRITE_THEN_READ != mode ) {
        if ( HAL_LL_I2C_MASTER_SUCCESS != hal_ll_i2c_master_start( map ) )
            return HAL_LL_I2C_MASTER_TIMEOUT_START;
    }

    if ( HAL_LL_I2C_MASTER_TIMEOUT_WRITE != ( status = hal_ll_i2c_master_write_byte( map, ( map->address << 1 ) | 1 ))) {
        if ( status ) {
            if ( HAL_LL_I2C_MASTER_SUCCESS != hal_ll_i2c_master_stop( map ) )
                return HAL_LL_I2C_MASTER_TIMEOUT_STOP;
        }
    } else {
        return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
    }

    clear_reg_bit( &( hal_ll_hw_reg->c1 ), HAL_LL_I2C_C1_TX_BIT );

    if ( 1 == len_read_data )
        set_reg_bit( &( hal_ll_hw_reg->c1 ), HAL_LL_I2C_C1_TXAK_BIT );
    else
        clear_reg_bit( &( hal_ll_hw_reg->c1 ), HAL_LL_I2C_C1_TXAK_BIT );

    if ( HAL_LL_I2C_MASTER_TIMEOUT_READ == hal_ll_i2c_master_read_byte( map ))
        return HAL_LL_I2C_MASTER_TIMEOUT_READ;

    for( i = len_read_data-1; i >= 0; i-- ) {
        switch (i) {
            case 0x0:
                if ( HAL_LL_I2C_MASTER_SUCCESS != hal_ll_i2c_master_stop( map ) )
                    return HAL_LL_I2C_MASTER_TIMEOUT_STOP;
                break;
            case 0x1:
                set_reg_bit( &( hal_ll_hw_reg->c1 ), HAL_LL_I2C_C1_TXAK_BIT );
                break;
            default :
                clear_reg_bit( &( hal_ll_hw_reg->c1 ), HAL_LL_I2C_C1_TXAK_BIT );
                break;
        }
        if ( 0 == i ) {
            *read_data_buf++ = hal_ll_hw_reg->d;
            break;
        } else {
            status = hal_ll_i2c_master_read_byte( map );
            if ( HAL_LL_I2C_MASTER_TIMEOUT_READ != status )
                *read_data_buf++ = ( uint8_t ) status;
            else
                return status;
        }
    }

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_write_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *write_data_buf, size_t len_write_data, hal_ll_i2c_master_end_mode_t mode ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct( map->base );
    size_t i;
    uint16_t time_counter = map->timeout;
    hal_ll_err_t status = HAL_LL_I2C_MASTER_SUCCESS;

    status = hal_ll_i2c_master_start( map );
    if ( HAL_LL_I2C_MASTER_SUCCESS != status )
        return status;

    if ( HAL_LL_I2C_MASTER_TIMEOUT_WRITE != ( status = hal_ll_i2c_master_write_byte( map, map->address << 1 ))) {
        if ( status ) {
            if( HAL_LL_I2C_MASTER_SUCCESS != hal_ll_i2c_master_stop( map ))
                return HAL_LL_I2C_MASTER_TIMEOUT_STOP;
            else
                return HAL_LL_I2C_MASTER_SUCCESS;
        }
    } else {
        return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
    }

    for( i = 0; i < len_write_data; i++ ) {
        if ( HAL_LL_I2C_MASTER_TIMEOUT_WRITE != ( status = hal_ll_i2c_master_write_byte( map, write_data_buf[i] ))) {
            if ( status ) {
                if ( HAL_LL_I2C_MASTER_SUCCESS == hal_ll_i2c_master_stop( map ))
                    return HAL_LL_I2C_MASTER_SUCCESS;
                else
                    return HAL_LL_I2C_MASTER_TIMEOUT_STOP;
            }
        } else {
            return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
        }
    }

    if ( HAL_LL_I2C_MASTER_END_MODE_STOP == mode ) {
        #if defined I2C_MASTER_CHIP_SELECT
        while ( check_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
            }
        }
        #endif
        clear_reg_bit( &( hal_ll_hw_reg->c1 ), HAL_LL_I2C_C1_MST_BIT );

        #if defined I2C_MASTER_CHIP_SELECT
        time_counter = map->timeout;
        while ( !check_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT )) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
            }
        }
        if ( check_reg_bit( &( hal_ll_hw_reg->flt ), HAL_LL_I2C_FLT_STARTF_BIT ))
                set_reg_bit( &( hal_ll_hw_reg->flt ), HAL_LL_I2C_FLT_STARTF_BIT );
        if ( check_reg_bit( &( hal_ll_hw_reg->flt ), HAL_LL_I2C_FLT_STOPF_BIT ))
                set_reg_bit( &( hal_ll_hw_reg->flt ), HAL_LL_I2C_FLT_STOPF_BIT );
        #endif

        set_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT );
    }
    else {
        /**
         * @note When R/W = 0, the input sample acquisition period starts
         * on the falling edge of SCL once the C0 bit of the command
         * byte has been latched, and ends when a Stop or
         * repeated Start condition has been issued.
         **/
        #ifdef __TFT_RESISTIVE_TSC2003__
        Delay_1ms();
        #endif
        set_reg_bit( &( hal_ll_hw_reg->c1 ), HAL_LL_I2C_C1_RSTA_BIT );
        #if defined I2C_MASTER_CHIP_SELECT
        time_counter = map->timeout;
        while ( !( check_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT ))) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
            }
        }

        if( check_reg_bit( &( hal_ll_hw_reg->flt ), HAL_LL_I2C_FLT_STARTF_BIT ))
            set_reg_bit( &( hal_ll_hw_reg->flt ), HAL_LL_I2C_FLT_STARTF_BIT );
        #endif
        set_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT );
    }
    #if defined I2C_MASTER_CHIP_SELECT
    time_counter = map->timeout;
    while ( check_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
        }
    }
    #endif
    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_start( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct( map->base );
    uint16_t time_counter = map->timeout;
    hal_ll_err_t status = HAL_LL_I2C_MASTER_SUCCESS;

    status = hal_ll_i2c_master_wait_for_idle( map );
    if ( HAL_LL_I2C_MASTER_SUCCESS != status ){
        return HAL_LL_I2C_MASTER_TIMEOUT_START;
    }

    set_reg_bit( &( hal_ll_hw_reg->c1 ), HAL_LL_I2C_C1_MST_BIT );

    if ( check_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_ARBL_BIT ) ){
            #if defined I2C_MASTER_CHIP_SELECT_MK64
            clear_reg_bit( &( hal_ll_hw_reg->c1), HAL_LL_I2C_C1_MST_BIT );
            #endif
            set_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_ARBL_BIT );
            #if defined I2C_MASTER_CHIP_SELECT
            if( check_reg_bit( &( hal_ll_hw_reg->flt ), HAL_LL_I2C_FLT_STARTF_BIT ))
               set_reg_bit( &( hal_ll_hw_reg->flt ), HAL_LL_I2C_FLT_STARTF_BIT );
            #endif
            set_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT );
        return HAL_LL_I2C_MASTER_ARBITRATION_LOST;
    }
    #if defined I2C_MASTER_CHIP_SELECT
    while ( !check_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_START;
        }
    }
    if( check_reg_bit( &( hal_ll_hw_reg->flt ), HAL_LL_I2C_FLT_STARTF_BIT ))
                set_reg_bit( &( hal_ll_hw_reg->flt ), HAL_LL_I2C_FLT_STARTF_BIT );
    #endif
    set_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT );
    #if defined I2C_MASTER_CHIP_SELECT
    time_counter = map->timeout;
    while ( check_reg_bit( &( hal_ll_hw_reg->s ), HAL_LL_I2C_S_IICIF_BIT ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_START;
        }
    }
    #endif

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static void hal_ll_i2c_master_map_pins( uint8_t module_index, hal_ll_i2c_pin_id *index_list ) {
    // Map new pins
    hal_ll_i2c_hw_specifics_map[module_index].pins.pin_scl.pin_name = hal_ll_i2c_scl_map[ index_list[module_index].pin_scl ].pin;
    hal_ll_i2c_hw_specifics_map[module_index].pins.pin_sda.pin_name = hal_ll_i2c_sda_map[ index_list[module_index].pin_sda ].pin;
    // SCL and SDA could have different alternate function settings, hence save both AF values
    hal_ll_i2c_hw_specifics_map[module_index].pins.pin_scl.pin_af = hal_ll_i2c_scl_map[ index_list[module_index].pin_scl ].af;
    hal_ll_i2c_hw_specifics_map[module_index].pins.pin_sda.pin_af = hal_ll_i2c_sda_map[ index_list[module_index].pin_sda ].af;
}

static void hal_ll_i2c_init( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_master_set_clock( map, true );

    hal_ll_i2c_hw_init( map );
}
